Update donation link in index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h2>Support this project</h2>
       <p>- Affiliate/referral links (placeholders)</p>
       <p>- <a href="prompts-pack.txt" id="lead-magnet" download>Download free prompts pack</a></p>
-      <p><a href="https://www.buymeacoffee.com/yourname" class="donate" target="_blank" rel="noopener noreferrer">Donate</a></p>
+      <p><a href="https://buymeacoffee.com/hardrivetech" class="donate" target="_blank" rel="noopener noreferrer">Donate</a></p>
     </aside>
 
     <footer class="site-footer">
