chore: add site monitoring workflow and improve performance optimizations in README

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta property="og:description" content="Curated AI productivity tools, prompts, and resources for creators.">
     <meta property="og:type" content="website">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
+    <link rel="preload" href="style.css" as="style">
+    <link rel="preload" href="script.js" as="script">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
