chore: implement consent management for analytics with privacy-first approach

--- a/index.html
+++ b/index.html
@@ -41,5 +41,15 @@
     <script async defer src="https://plausible.io/js/plausible.js" data-domain="yourdomain.com"></script>
     -->
     <script src="script.js"></script>
+    <!-- Cookie / analytics consent banner -->
+    <div id="consent-banner" class="consent-banner" role="dialog" aria-live="polite" aria-label="Cookie consent" hidden>
+      <div class="consent-inner wrap">
+        <div class="consent-text">We use analytics to understand site usage. Accept to enable Google Analytics (GA4). You can change this later.</div>
+        <div class="consent-actions">
+          <button id="consent-accept" class="btn">Accept</button>
+          <button id="consent-decline" class="btn btn-link">Decline</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
