chore: enhance privacy features with consent management and server-side analytics forwarding

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </aside>
 
     <footer class="site-footer">
-      <div class="wrap">Built for passive income automation — scaffolded for GitHub Pages.</div>
+      <div class="wrap">Built for passive income automation — scaffolded for GitHub Pages. <a href="privacy.html">Privacy Policy</a> · <a href="#" id="analytics-settings">Analytics settings</a></div>
     </footer>
 
     <!-- Analytics placeholder: paste your analytics script here (Plausible, GA4, etc.) -->
